# rag-finetuning

./: Dockerfile  README.md  collect_all_logs.sh  deploy-kubeflow-training.sh  deploy_distributed_training.py  deploy_kubeflow_training.py  docker-compose.yml  docker-run.sh  kubeflow_embedding_training.py  prepare_distributed_data.py  prepare_training_data.py  pyproject.toml  requirements.txt  setup-kind-kubeflow.sh  simple-docker.sh  training-storage.yaml
feature_repo/: README.md  __init__.py  chunk_parquet_data.py  feature_store.yaml  training_data_features.py  wiki_features.py
feature_repo/data/: train-00000-of-00157_sample.parquet  train-00000-of-00157_sample_with_timestamp_chunked.parquet
